<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" >

    <!-- Toolbar -->

    <android.support.constraint.Guideline
        android:id="@id/guideline"
        style="@style/Wilder.Toolbar.Guideline" />

    <View
        android:id="@id/toolbar"
        style="@style/Wilder.Toolbar"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:src="@drawable/ic_clear_black_24dp"
        android:onClick="cancelChangesButtonHandler"
        style="@style/Wilder.Toolbar.ImageButton"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/editTripTitle"
        android:text="@string/editTripTitle"
        style="@style/Wilder.Toolbar.Title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <ImageButton
        android:src="@drawable/ic_done_black_24dp"
        android:onClick="saveChangesButtonHandler"
        style="@style/Wilder.Toolbar.ImageButton"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Trip Fields -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="85dp" />

            <!-- Title -->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/tripTitleLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tripTitle" />

            <EditText
                android:id="@id/tripTitle"
                android:inputType="textCapWords"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Description -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/tripDescriptionLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tripDescription" />

            <EditText
                android:id="@id/tripDescription"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="4"
                android:minLines="1"
                android:gravity="top|left"
                android:maxLines="12"
                android:scrollbars="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tripTitle"
                app:layout_constraintHorizontal_bias="0.0" />

            <!-- Share mode -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripShareModeLabel"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="@+id/tripShareModeSpinner" />

            <Spinner
                android:id="@id/tripShareModeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tripDescription"
                app:layout_constraintHorizontal_bias="0.0" />

            <!-- Travel mode -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripTravelModeLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="@+id/tripTravelModeSpinner" />

            <Spinner
                android:id="@id/tripTravelModeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/guideline3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tripShareModeSpinner"
                app:layout_constraintHorizontal_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="102dp"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>